[package]
name = "ormlib"
version = "1.0.2"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/evgenyigumnov/orm-lib"
license = "MIT"
license-file = "../LICENSE"
keywords = ["orm", "sql", "database", "sqlite", "mysql"]
categories = ["library"]
readme = "../README.md"
description = "Indeed, an ORM library, not a framework, written in Rust"





[dependencies]
futures = "0.3.26"
async-trait = "0.1.73"
log = "0.4.17"
thiserror = "1.0.47"
tokio = { version = "1.25.0", features = ["full"] }
serde = "1.0"
anyhow = "1.0.75"
rusqlite = { version = "0.29.0", features = ["bundled"], optional = true }
mysql_async = { version = "0.32.2", default-features = false, features = ["default-rustls"], optional = true }

[dev-dependencies]
serde_derive = "1.0"

[features]
sqlite = ["rusqlite"]
mysql = ["mysql_async"]