[package]
name = "ormlib_derive"
version = "0.3.3"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/evgenyigumnov/orm-lib/tree/main/orm_derive"
license = "MIT"
license-file = "../LICENSE"
keywords = ["orm", "sql", "database", "sqlite"]
categories = ["library"]
readme = "README.md"
description = "Derive for Ormlib"



[lib]
proc-macro = true


[dependencies]
darling = "0.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
ormlib = { path = "../lib", version = "0.3.3"}



